--- a/playlisttest/build.gradle
+++ b/playlisttest/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-devtools:2.7.8'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	
 	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
